# foyyer

./: .gitignore  CLAUDE.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
.github/: CODEOWNERS
.github/workflows/: lint-ts.yml
app/: page.tsx
convex/: auth.config.ts  convex.config.ts  feed.ts  friendships.ts  group_agenda.ts  group_invitations.ts  group_members.ts  groups.ts  invitations.ts  notifications.ts  production_likes.ts  production_reviews.ts  productions.ts  review_reactions.ts  schema.ts  search.ts  tasks.ts  user_agenda.ts  users.ts  venues.ts
convex/_generated/: api.d.ts
src/app/: ConvexClientProvider.tsx  globals.css  layout.tsx  page.tsx
src/app/agenda/: page.tsx
src/app/agenda/[id]/: page.tsx
src/app/groups/: page.tsx
src/app/groups/[id]/: page.tsx
src/app/groups/new/: page.tsx
src/app/notifications/: page.tsx
src/app/productions/: page.tsx
src/app/productions/[id]/: page.tsx
src/app/search/: page.tsx
src/components/: clerk-provider.tsx  feed-client.tsx  feed-skeleton.tsx  header.tsx  navbar.tsx  production-status-dropdown.tsx  rating.tsx  stars.tsx  user-sync.tsx
src/components/profile/: edit-bio-dialog.tsx  friends-tab.tsx  groups-tab.tsx  invite-user-dialog.tsx  overview-tab.tsx  reviews-tab.tsx
src/components/search/: discover.tsx  multi-search.tsx  search-results.tsx
src/components/ui/: button.tsx  card.tsx  skeleton.tsx
src/lib/: search.ts  types.ts  utils.ts
src/lib/hooks/: useInfiniteScroll.ts
theater-encyclopedie/: adlib_parser.py  import.py  main.py  pyproject.toml
(+5 files in other folders)
