[project]
name = "theater-encyclopedie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "convex>=0.7.0",
    "dotenv>=0.9.9",
    "polars>=1.32.3",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
    "ruff>=0.12.10",
]
